--- a/hello-spring-cloud/auth-center/src/main/resources/application.yml
+++ b/hello-spring-cloud/auth-center/src/main/resources/application.yml
@@ -42,6 +42,18 @@ spring:
     password: baicai@930715
     driver-class-name: com.mysql.jdbc.Driver
 
+security:
+  oauth2:
+    resource:
+      id: oauth2-resource
+      user-info-uri: http://7dwd7.com:8083/index/userInfo
+      prefer-token-info: true
+      token-info-uri: http://7dwd7.com:8080/oauth/check_token
+    client:
+      access-token-uri: http://localhost:8080/oauth/token
+      user-authorization-uri: http://localhost:8080/oauth/authorize
+      client-id: barClientIdPassword
+      client-secret: secret
 
 
 
