--- a/hello-spring-boot/pom.xml
+++ b/hello-spring-boot/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.wd7</groupId>
+	<groupId>com.7dwd7.demo.boot</groupId>
 	<artifactId>parent</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>pom</packaging>
 
 	<name>parent</name>
-	<description>spring cloud parent</description>
+	<description>spring boot parent</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -81,4 +81,54 @@
 		</plugins>
 	</build>
 
+	<modules>
+		<!-- <module>client1</module> -->
+		<!-- <module>client2</module> -->
+		<!-- <module>gateway</module> -->
+		<!-- <module>eureka-server</module> -->
+	</modules>
+	<dependencyManagement>
+
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>${spring-boot-dependencies.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>io.spring.platform</groupId>
+				<artifactId>platform-bom</artifactId>
+				<version>${spring-platform.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+	<developers>
+		<developer>
+			<id>1</id>
+			<name>007</name>
+			<email>wangde007@outlook.com</email>
+            <organization>go any where</organization>
+		</developer>
+	</developers>
+	<repositories>
+		<repository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 </project>
