--- a/hello-spring-boot/pom.xml
+++ b/hello-spring-boot/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.7dwd7.demo.boot</groupId>
+	<groupId>com.wangde007.demo.boot</groupId>
 	<artifactId>parent</artifactId>
 	<version>1.0.0</version>
 	<packaging>pom</packaging>
@@ -82,7 +82,7 @@
 	</build>
 
 	<modules>
-		<!-- <module>client1</module> -->
+		<module>web-helloworld</module>
 		<!-- <module>client2</module> -->
 		<!-- <module>gateway</module> -->
 		<!-- <module>eureka-server</module> -->
